--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 body {
-	font-family: sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
+
+.container {
+	text-align: center;
+
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(4, 1fr);
+	gap: 16px;
+}
+
+.card:nth-child(1) {
+	grid-column: 1 / span 1;
+	grid-row: 2 / span 2;
+}
+
+.card:nth-child(2) {
+	grid-column: 2 / span 1;
+	grid-row: 1 / span 2;
+}
+
+.card:nth-child(3) {
+	grid-column: 2 / span 1;
+	grid-row: 3 / span 2;
+}
+
+.card:nth-child(4) {
+	grid-column: 3 / span 1;
+	grid-row: 2 / span 2;
+}
+
