--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -49,3 +49,24 @@
 .red {
 	color: #5416b8;
 }
+
+.card1 {
+	grid-column: 1 / span 1;
+	grid-row: 2 / span 2;
+}
+.card2 {
+	grid-column: 2 / span 1;
+	grid-row: 1 / span 2;
+}
+
+.card3 {
+	grid-column: 2 / span 1;
+	grid-row: 3 / span 2;
+}
+
+.card4 {
+	grid-column: 3 / span 1;
+	grid-row: 2 / span 2;
+}
+
+
